--- a/styles/main.css
+++ b/styles/main.css
@@ -1,1 +1,32 @@
 /* Put any custom CSS rules here */
+
+img{
+	text-align: center;
+	 display: block;
+    margin: 0px auto;
+}
+h1 {
+	text-align: center;
+	font-family:Helvetica;
+} 
+p {font-family:Helvetica;
+
+}
+title {text-align: center;
+}
+.tick line {
+	stroke: #ccc;
+} 
+.tick text{
+	fill: #ccc;
+}
+h1 {
+	margin:20px auto 10px auto;
+}
+h2 {
+	margin:20px auto 10px auto;
+
+}
+p {margin:20px auto 10px auto;
+	
+} 
